feat(client): Implemented the applications flow, the user can see tables and apply to them. The user can´t apply twice to the same table or to their own tables. The my-applications page show all the user's applications. Still need to finish the design and the rest of the flow.
